--- a/Home.css
+++ b/Home.css
@@ -15,6 +15,8 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  animation-duration: 800ms !important;
+  animation-delay: 75ms !important;
   margin: 94px 391px 0 0;
 }
 
