--- a/nicepage.css
+++ b/nicepage.css
@@ -20,12 +20,18 @@
   clip: rect(0, 0, 0, 0);
   border: 0; }
 
-
+.yoyoyo {
+  height : 31px;
+  max-height : 31px;
+  line-height : 30px;
+  padding-right : 100px;
+  padding-left : 100px;
+}
  
 header .u-sheet-1 {
   display: flex !important;
   justify-content: space-between !important; 
-  align-items: center !important; /
+  align-items: center !important; 
   width: 100% !important;
   padding: 0 20px !important; 
 }
@@ -44,11 +50,89 @@ header .u-sheet-1 {
   transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;
 }
 
+
+#sec-e1db > div:nth-child(2) > div:nth-child(1) > h2:nth-child(1) {
+  color : rgb(245, 25, 25);
+  box-shadow : rgb(241, 9, 9) 0px 0px 0px;
+  background-image : linear-gradient(13deg, rgb(26, 115, 232) 0%, rgb(81, 45, 168) 0%);
+  }
+  #sec-e1db > div:nth-child(2) > div:nth-child(1) {
+  background-image : linear-gradient(33deg, rgb(26, 115, 232) 14%, rgb(81, 45, 168) 33%);
+  }
+  #sec-22f9 {
+  }
+  #sec-03c7 {
+  background-image : linear-gradient(90deg, rgb(208, 26, 232), rgb(81, 45, 168) 50%);
+  }
+  #sec-58ab > div:nth-child(1) {
+  background-image : linear-gradient(90deg, rgb(232, 26, 225), rgb(81, 45, 168) 50%);
+  }
+
 .join-aurora-btn:hover {
   background-color: #5c4eff !important; 
   color: #ffffff !important; 
 }
 
+#sec-e1db>div:nth-child(2)>div:nth-child(1)>a:nth-child(3) {
+  background-image : linear-gradient(49deg, rgb(91, 26, 232) 50%, rgb(45, 84, 168) 49%);
+  box-shadow : rgb(0, 0, 0) 0px 0px 0px;
+  text-decoration-line : none;
+  font-style : italic;
+  text-align : center;
+  color : rgb(0, 0, 0);
+  }
+
+  #sec-03c7>div:nth-child(1)>div:nth-child(3)>div:nth-child(2)>div:nth-child(3)>div:nth-child(1)>h4:nth-child(2)>a:nth-child(1) {
+    color : rgb(17, 3, 3);
+    }
+
+
+    #block-1 > div:nth-child(1) > div:nth-child(1) {
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
+    background-image : linear-gradient(122deg, rgb(232, 222, 26) 18%, rgb(168, 148, 45) 50%);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(2) > div:nth-child(1) {
+    background-image : linear-gradient(90deg, rgb(232, 81, 26) 21%, rgb(138, 57, 0) 50%);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(3) > div:nth-child(1) {
+    background-image : linear-gradient(90deg, rgb(0, 2, 5), rgb(42, 33, 64) 50%);
+    }
+    #block-1 {
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(4) > div:nth-child(1) {
+    background-image : linear-gradient(139deg, rgb(0, 24, 66) 38%, rgb(27, 58, 111) 72%);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(5) > div:nth-child(1) {
+    background-image : linear-gradient(133deg, rgb(198, 59, 216) 22%, rgb(81, 45, 168) 64%);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(6) > div:nth-child(1) {
+    background-image : linear-gradient(184deg, rgb(0, 0, 0) 20%, rgb(206, 34, 36) 76%);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(3) > div:nth-child(1) > h4:nth-child(2) > a:nth-child(1) {
+    color : rgb(240, 240, 240);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(4) > div:nth-child(1) > h4:nth-child(2) > a:nth-child(1) {
+    color : rgb(255, 255, 255);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(6) > div:nth-child(1) > h4:nth-child(3) > a:nth-child(1) {
+    color : rgb(253, 252, 252);
+    }
+    #block-1 > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) > div:nth-child(5) > div:nth-child(1) > h4:nth-child(2) > a:nth-child(1) {
+    color : rgb(255, 255, 255);
+    }
+    
+    #sec-03c7 > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) > div:nth-child(2) > div:nth-child(1) > h4:nth-child(2) > a:nth-child(1) {
+      color : rgb(255, 255, 255);
+      }
+      #sec-03c7 > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) > div:nth-child(3) > div:nth-child(1) > h4:nth-child(2) > a:nth-child(1) {
+      color : rgb(255, 255, 255);
+      }
+      #sec-03c7 > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) > div:nth-child(1) > div:nth-child(1) > h4:nth-child(3) > a:nth-child(1) {
+      color : rgb(255, 255, 255);
+      }
+
+      
 .see-more-btn {
   background-color: #5c4eff !important;
   border-color: #5c4eff !important;
